--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,11 @@
       href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;500;700&display=swap"
       rel="stylesheet"
     />
-    <title>Soluciones legales</title>
+    <link
+      href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css"
+      rel="stylesheet"
+    />
+    <title>Usa Solutions</title>
   </head>
   <body>
     <div id="app"></div>
